Updating header clamp to fix biddingforgood length on mobile

--- a/assets/stylesheets/_typography.scss
+++ b/assets/stylesheets/_typography.scss
@@ -5,11 +5,11 @@ h1, h2 ,h3 , h4, h5 {
 }
 
 h1 {
-  font-size: clamp(2.75rem, 5vw, 4rem);
+  font-size: clamp(2.5rem, 4vw, 4rem);
 }
 
 h2 {
-  font-size: clamp(2rem, 4vw, 3.25rem);
+  font-size: clamp(1.75rem, 4vw, 3.25rem);
 }
 
 h3 {
